--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.12",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
+    "expo": "~49.0.5",
+    "expo-av": "^13.4.1",
+    "expo-dev-client": "^2.4.6",
+    "expo-linear-gradient": "^12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-reanimated": "^3.5.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screen": "^1.0.1",
+    "react-native-screens": "^3.24.0",
+    "react-native-svg": "^13.13.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.3.1",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
